# petproj

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 214810def148_clubs_cascade.py  349ef58da19b_clubs_cascade3.py  3905f95a0e58_clubs_cascade4.py  396597d6ee57_clubs_cascade5.py  4db0c8892605_bd_up_2026.py  823f834526ce_player_id_m2m.py  9b9309b67144_create_users_table.py  9c3bfac30323_exchange_crud.py  bd667c54de7a_player_id_m2m_lazy.py  c041dc32dec4_clubs_cascade2.py  d58b573ef304_exchange_column_change.py  db814c9dedde_user_shares_exchange_owner_and_cascade.py  dd27d46b6a01_user_shares_exchange_owner_and_cascade.py
src/app/: application.py  config.py  db.py  main.py
src/controllers/: router.py
src/models/: clubs.py  clubsandplayers.py  exchange_owners.py  exchanges.py  football_players.py  shares.py  users.py
src/services/: data_service.py  db.py  dependencies.py  exceptions.py
src/services/repositories/: clubs_repo.py  exchanges_repo.py  ready_info.py  repositories.py  shares_repo.py
src/services/schemas/: schemas.py
